--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,11 @@
+title: Arash Saeidpour
+
+description: > # your text below (remove <br> elements if you don't need line breaks)
+  First description 
+  <br><br>
+  Second description 
+  <br><br>
+  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+
+
 theme: jekyll-theme-minimal
