--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: Arash Saeidpour
-
-description: > # your text below (remove <br> elements if you don't need line breaks)
+title: Arash Saeidpour 
+logo: "/images/logo.png?raw=true" 
+description: > # 
   First description 
   <br><br>
   Second description 
   <br><br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
-
-
+  
 theme: jekyll-theme-minimal
+google_analytics: UA-000000-0 # your Google Analytics tracking ID here
