--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Arash Saeidpour 
 logo: "/images/logo.png?raw=true" 
 description: > # 
-  First description 
+  404 for now!
   <br><br>
-  Second description 
+  404 for now!
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/arash-saeidpour/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
