--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Arash Saeidpour 
 logo: "/images/logo.png?raw=true" 
 description: > # 
-  First
+  404 for now!
   <br><br>
-  Second
+  404 for now!
   <br><br>
   <a href="https://www.linkedin.com/in/arash-saeidpour/">View My LinkedIn Profile</a> 
   
