--- a/_config.yml
+++ b/_config.yml
@@ -118,7 +118,7 @@ author:
       url: mailto:arash@uga.edu
     - label: "arash-saeidpour"
       icon: "fab fa-fw fa-linkedin-in"
-      url: "https://www.linkedin.com/in/arash-saeidpour"
+      url: "https://linkedin.com/in/arash-saeidpour"
     - label: "ArashSaeidpour"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/ArashSaeidpour"
